--- a/DirectorySolutions/DirectorySolutions.csproj
+++ b/DirectorySolutions/DirectorySolutions.csproj
@@ -46,17 +46,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DirecotrySolutions.cs">
-      <SubType>Form</SubType>
+    <Compile Include="DirectorySelection.cs">
+      <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="DirecotrySolutions.Designer.cs">
-      <DependentUpon>DirecotrySolutions.cs</DependentUpon>
+    <Compile Include="DirectorySelection.Designer.cs">
+      <DependentUpon>DirectorySelection.cs</DependentUpon>
     </Compile>
     <Compile Include="FileOperations.cs" />
+    <Compile Include="Main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Main.Designer.cs">
+      <DependentUpon>Main.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="DirecotrySolutions.resx">
-      <DependentUpon>DirecotrySolutions.cs</DependentUpon>
+    <EmbeddedResource Include="DirectorySelection.resx">
+      <DependentUpon>DirectorySelection.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Main.resx">
+      <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
