--- a/DirectorySolutions/DirectorySolutions.csproj
+++ b/DirectorySolutions/DirectorySolutions.csproj
@@ -65,6 +65,12 @@
     <Compile Include="FindAndReplaceControls.Designer.cs">
       <DependentUpon>FindAndReplaceControls.cs</DependentUpon>
     </Compile>
+    <Compile Include="FindExtension.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="FindExtension.Designer.cs">
+      <DependentUpon>FindExtension.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +87,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FindAndReplaceControls.resx">
       <DependentUpon>FindAndReplaceControls.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FindExtension.resx">
+      <DependentUpon>FindExtension.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
