--- a/DirectorySolutions/DirectorySolutions.csproj
+++ b/DirectorySolutions/DirectorySolutions.csproj
@@ -46,30 +46,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DirectorySelection.cs">
+    <Compile Include="UserControls\DirectorySelection.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="DirectorySelection.Designer.cs">
+    <Compile Include="UserControls\DirectorySelection.Designer.cs">
       <DependentUpon>DirectorySelection.cs</DependentUpon>
     </Compile>
-    <Compile Include="FileInformation.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="FileOperations.cs" />
-    <Compile Include="FileSelection.cs">
+    <Compile Include="UserControls\FileSelection.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="FileSelection.Designer.cs">
+    <Compile Include="UserControls\FileSelection.Designer.cs">
       <DependentUpon>FileSelection.cs</DependentUpon>
     </Compile>
-    <Compile Include="FindAndReplaceControls.cs">
+    <Compile Include="UserControls\FindAndReplaceControls.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="FindAndReplaceControls.Designer.cs">
+    <Compile Include="UserControls\FindAndReplaceControls.Designer.cs">
       <DependentUpon>FindAndReplaceControls.cs</DependentUpon>
     </Compile>
-    <Compile Include="FindExtension.cs">
+    <Compile Include="UserControls\FindExtension.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="FindExtension.Designer.cs">
+    <Compile Include="UserControls\FindExtension.Designer.cs">
       <DependentUpon>FindExtension.cs</DependentUpon>
     </Compile>
     <Compile Include="Main.cs">
@@ -78,18 +78,21 @@
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\MainModel.cs" />
+    <Compile Include="Presenters\MainPresenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="DirectorySelection.resx">
+    <Compile Include="Views\MainView.cs" />
+    <EmbeddedResource Include="UserControls\DirectorySelection.resx">
       <DependentUpon>DirectorySelection.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FileSelection.resx">
+    <EmbeddedResource Include="UserControls\FileSelection.resx">
       <DependentUpon>FileSelection.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FindAndReplaceControls.resx">
+    <EmbeddedResource Include="UserControls\FindAndReplaceControls.resx">
       <DependentUpon>FindAndReplaceControls.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FindExtension.resx">
+    <EmbeddedResource Include="UserControls\FindExtension.resx">
       <DependentUpon>FindExtension.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
@@ -117,5 +120,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
