--- a/DirectorySolutions/packages.config
+++ b/DirectorySolutions/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="NLog" version="4.7.0" targetFramework="net472" />
   <package id="NLog.Config" version="4.7.0" targetFramework="net472" />
   <package id="NLog.Schema" version="4.7.0" targetFramework="net472" />
