--- a/DirectorySolutions/App.config
+++ b/DirectorySolutions/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="DirectorySolutions.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="FileManager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -17,6 +18,26 @@
     </assemblyBinding>
   </runtime>
   <userSettings>
+    <DirectorySolutions.Properties.Settings>
+      <setting name="Path" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="SaveLocation" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="FileColumns" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="MovieColumns" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="FastPaths" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="OMDBKEY" serializeAs="String">
+        <value />
+      </setting>
+    </DirectorySolutions.Properties.Settings>
     <FileManager.Properties.Settings>
       <setting name="Path" serializeAs="String">
         <value />
