--- a/DirectorySolutions/File Manager.csproj
+++ b/DirectorySolutions/File Manager.csproj
@@ -135,6 +135,12 @@
     <Compile Include="Presenters\MainPresenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserControls\MoveOrDelete.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\MoveOrDelete.Designer.cs">
+      <DependentUpon>MoveOrDelete.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\MovieManagement.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -196,6 +202,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UserControls\MoveOrDelete.resx">
+      <DependentUpon>MoveOrDelete.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControls\MovieManagement.resx">
       <DependentUpon>MovieManagement.cs</DependentUpon>
     </EmbeddedResource>
